<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:checked="true"
            android:icon="@drawable/ic_home_white"
            android:title="@string/menu_home_title" />

        <item
            android:id="@+id/menu_setting"
            android:icon="@drawable/ic_settings_applications_white"
            android:title="@string/menu_setting_title" />

        <item
            android:id="@+id/menu_knowladge"
            android:icon="@drawable/ic_featured_play_list_white_18dp"
            android:title="@string/menu_knowladge_title" />

        <item
            android:id="@+id/menu_third"
            android:icon="@drawable/ic_playlist_add_white_18dp"
            android:title="@string/menu_third_title" />

    </group>
</menu>