<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cl_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/spacer_medium"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:showDividers="middle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carouselview_V1_desc"
                android:textStyle="bold" />

            <!--1-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carouselview_V1_text1" />

            <com.example.admin.androidtree.base.widget.CarouselView
                android:id="@+id/cv_images1"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <!--2-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carouselview_V1_text2" />

            <com.example.admin.androidtree.base.widget.CarouselView
                android:id="@+id/cv_images2"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <!--3-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carouselview_V1_text3" />

            <com.example.admin.androidtree.base.widget.CarouselView
                android:id="@+id/cv_images3"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <!--4-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carouselview_V1_text4" />

            <com.example.admin.androidtree.base.widget.CarouselView
                android:id="@+id/cv_images4"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <!--5-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carouselview_V1_text5" />

            <com.example.admin.androidtree.base.widget.CarouselView
                android:id="@+id/cv_images5"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <!--6-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carouselview_V1_text6" />

            <com.example.admin.androidtree.base.widget.CarouselView
                android:id="@+id/cv_images6"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <!--7-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carouselview_V1_text7" />

            <com.example.admin.androidtree.base.widget.CarouselView
                android:id="@+id/cv_images7"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <!--8-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carouselview_V1_text8" />

            <com.example.admin.androidtree.base.widget.CarouselView
                android:id="@+id/cv_images8"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>